--- a/_pages/Recent Projects.html
+++ b/_pages/Recent Projects.html
@@ -1,45 +1,11 @@
 ---
 layout: archive
 title: "Talks and presentations"
-permalink: /talks/
+permalink: /Recent Projects/
 author_profile: true
 ---
 
 
-<h3>Let's learn the basic library that mostly used in Machine Learning </h3>
-
-### Code Explanation and Use Cases
-
-```python
-# Importing all the libraries that we need.
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-%matplotlib inline
-```
-
-1. **NumPy (`import numpy as np`):**
-   - **Explanation:** NumPy is a library for numerical computations in Python.
-   - **Use Cases:** Handling arrays and matrices, performing mathematical operations on large datasets efficiently.
-
-2. **Pandas (`import pandas as pd`):**
-   - **Explanation:** Pandas is a library for data manipulation and analysis.
-   - **Use Cases:** Reading data from various file formats (CSV, Excel), data cleaning, transformation, and analysis, working with DataFrames.
-
-3. **Matplotlib (`import matplotlib.pyplot as plt`):**
-   - **Explanation:** Matplotlib is a plotting library for creating static, animated, and interactive visualizations in Python.
-   - **Use Cases:** Generating plots and graphs (line plots, bar charts, histograms), visualizing data trends and distributions.
-
-4. **Seaborn (`import seaborn as sns`):**
-   - **Explanation:** Seaborn is a statistical data visualization library based on Matplotlib.
-   - **Use Cases:** Creating informative and attractive statistical graphics, such as heatmaps, violin plots, and box plots.
-
-5. **Matplotlib Inline Magic (`%matplotlib inline`):**
-   - **Explanation:** This is a Jupyter Notebook-specific command that allows Matplotlib plots to be displayed inline within the notebook.
-   - **Use Cases:** Ensuring that all plots generated in a Jupyter Notebook are shown immediately below the code cells that produce them.
-
-This set of libraries is essential for performing data analysis, visualization, and manipulation, providing a comprehensive toolkit for handling and exploring datasets in Python.
 
 {% if site.talkmap_link == true %}
 
